--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ readme = "README.md"
 packages = [{include = "component_library_plugin"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.10,<3.12"
+pyside6 = "^6.5.1.1"
 
 
 [build-system]
