--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "component_library_plugin"}]
 [tool.poetry.dependencies]
 python = ">=3.10,<3.12"
 pyside6 = "^6.5.1.1"
+certifi = "^2023.5.7"
 
 
 [build-system]
