--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "src_plugin"}]
 python = ">=3.10,<3.12"
 pyside6 = "^6.5.1.1"
 certifi = "^2023.5.7"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
