Add pre-commit configuration

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,12 @@ coverage.xml
 # Sphinx documentation
 docs/_build/
 
+# Mac OS
+.DS_Store
+
+# CLion/PyCharm
+.idea
+
 # project specific
 .env
 .venv
