added license to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "component-library-plugin"
 version = "0.1.0"
 description = ""
+license = "MIT"
 authors = ["Amulya Paritosh <amulya1171@gmail.com>"]
 readme = "README.md"
 packages = [{include = "src"}]
