--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [{include = "src"}]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.10"
-pyside6 = "^6"
+PySide2 = "^5"
 certifi = "^2023.5.7"
 python-dotenv = "^1.0.0"
 
